# SudokuScanAndSolve

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  android_build.sh
CommonSource/: CMakeLists.txt
CommonSource/base/: ExecutionHelp.h  colors.h  math.h  spin_mutex.h  utils.h
CommonSource/cv/: contourUtils.cpp  contourUtils.h  imageUtils.cpp  imageUtils.h  types.h  utils2d.cpp  utils2d.h
CommonSource/cv/recognition/: digit.cpp  digit.h  sudoku.cpp  sudoku.h
CommonSource/sudoku/: App.cpp  App.h  History.h  IndexContainer.cpp  IndexContainer.h  Sheet.cpp  Sheet.h  creator.cpp  creator.h  deduction.cpp  deduction.h  solver.cpp  solver.h
Qt/: CMakeLists.txt  android_build.sh  main.cpp
Qt/android/: AndroidManifest.xml  build.gradle
Qt/android/res/drawable/: splashscreen.xml  splashscreen_land.xml  splashscreen_port.xml
Qt/qt/: Application.cpp  Application.h  Assets.cpp  Assets.h  FileSystem.cpp  FileSystem.h  ImageProvider.cpp  ImageProvider.h  ProcessingFilter.cpp  ProcessingFilter.h  StateRAII.h  Style.h  SudokuInterface.cpp  SudokuInterface.h  imageConvert.cpp  imageConvert.h
Qt/resources/: fonts.qrc  qml.qrc  trainData.qrc
Qt/resources/qml/: CameraHandle.qml  CameraView.qml  InstructionsView.qml  LicensesView.qml  NumberEdit.qml  NumberEditButton.qml  PuzzleRect.qml  PuzzleTable.qml  ScanningView.qml  SettingsView.qml  SolvingView.qml  main.qml
Qt/resources/qml/Custom/: Button.qml  CheckBox.qml  CloseButton.qml  MaterialFontButton.qml  Page.qml  RichText.qml  ToolTip.qml
Test/: CMakeLists.txt  main.cpp
Test/TestOutput/SudokuRecognition/ref/: pictures_ref.csv  total_ref.csv  videos_ref.csv
Test/test/: utils.cpp  utils.h
Test/test/cv/recognition/: digit.cpp  digit.h  sudoku.cpp  sudoku.h
Test/test/sudoku/: solving.cpp  solving.h
TestData/Recognition/Sheets/Picture/: 2013-04-05_09-59-14.sp  2013-04-05_10-00-01.sp  2013-04-05_10-00-08.sp  2013-04-05_10-00-20.sp  2013-04-05_10-00-26.sp  2013-04-05_10-00-44.sp  2013-04-05_10-00-59.sp  2013-04-05_10-01-06.sp  20171010_093435.sp  BQ320x240_05.sp  BQ320x240_06.sp  BQ320x240_11.sp  BQ3264x2448_06.sp  BQ3264x2448_07.sp  BQ3264x2448_09.sp  BQ3264x2448_10.sp  Galaxy1600x1200_2.sp  Galaxy1600x1200_3.sp  Galaxy1600x1200_4.sp  Galaxy1600x1200_5.sp  Galaxy1600x1200_6.sp  Galaxy1600x1200_8.sp  Galaxy320x240_3.sp  QtScreenshot0.sp  SurfTab1600x1200_07.sp  SurfTab1600x1200_08.sp  debug0_640x320.sp  iPhone2592x1936_00.sp  iPhone2592x1936_01.sp  iPhone2592x1936_03.sp  iPhone2592x1936_04.sp  iPhone2592x1936_07.sp  iPhoneScreenshot0.sp  iPhoneScreenshot1.sp  image1.sp  sudoku0.sp  sudoku11.sp  sudoku12.sp  sudoku3.sp  sudoku6.sp  (+1 more)
TestData/Recognition/Sheets/Video/: BQ176x144_5.sp  BQ176x144_6.sp  BQ640x480_3.sp  Galaxy2.sp  Galaxy3.sp  SurfTab_SD0.sp  SurfTab_SD1.sp  SurfTab_SD2.sp  SurfTab_SD5.sp
TestData/Solving/invalid/: longTimeToSolve.sp  longTimeToSolve_although66WouldBeFast.sp
TestData/Solving/not_unique/: 0.sp  2_lotSolutions.sp  4_diagonals_lotSolutions.sp  5_diagonals_lotSolutions.sp  7.sp  bla_diagonals.sp  strange.sp
TestData/Solving/unique/: 00.sp  0_uniqueSolution.sp  1.sp  12.sp  12_diagonals.sp  14_diagonals.sp  16_solution_0.sp  18_diagonals.sp  19_diagonals.sp  1_diagonals.sp  1_uniqueSolution.sp  21.sp  21_diagonals.sp  22_diagonals.sp  23.sp  23_diagonals.sp  25_diagonals.sp  29.sp  29_diagonals.sp  32_diagonals.sp  34_diagonals.sp  35.sp  36_diagonals.sp  37.sp  37_diagonals.sp  38_diagonals.sp  39_diagonals.sp  3_diagonals.sp  3_diagonals_uniqueSolution.sp  41.sp  41_diagonals.sp  43_diagonals.sp  46.sp  46_diagonals.sp  47_diagonals.sp  49_diagonals.sp  4_diagonals.sp  5.sp  50_diagonals.sp  51.sp  (+44 more)
